--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cafeteria SASS</title>
+  <link rel="stylesheet" href="build/css/app.css">
 </head>
 <body>
+  <h1>TE AMO</h1>
   
 </body>
 </html>
